--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,18 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:0.5.6'
+    }
+}
+
 apply plugin: 'android-library'
 
 android {
     compileSdkVersion 17
-    buildToolsVersion = 17
+    buildToolsVersion = '18.1'
 
     sourceSets {
         defaultConfig {
